--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
         <h1>Sayanth T M</h1>
         <p>
             Email: <a href="mailto:sayanth.t.m9090@gmail.com">sayanth.t.m9090@gmail.com</a> |
-            LinkedIn: <a href="https://www.linkedin.com/in/sayanth-t-m-889759218">linkedin.com/in/sayanth-t-m-889759218</a> |
-            Phone: (701) 290-2263 | GitHub: <a href="https://github.com/sayanth-t-m">github.com/sayanth-t-m</a>
+            LinkedIn: <a href="https://www.linkedin.com/in/sayanth-t-m-889759218">sayanth-t-m-</a> |
+            Phone: <a href="tel:917012902263">(701) 290-2263</a> |
+            GitHub: <a href="https://github.com/sayanth-t-m">sayanth-t-m</a>
+            WhatsApp: <a href="https://wa.me/7012902263">7012902263</a>
+            Instagram: <a href="https://www.instagram.com/sayanth_t_m_/">sayanth_t_m_</a>
         </p>
         <p class="address">
             Puthiya Veettil House, Chala East, 670621, Chala, Kannur
         </p>
     </header>
+    
 
     <div class="container">
         <h2>Objective:</h2>
