--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sayanth T M - Resume</title>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="particles-js"></div> <!-- Container for particle animation -->
+    
     <header>
-        <img src="foto1.jpg" alt="Profile Picture">
-        <h1>Sayanth T M</h1>
-        <p>
-            Email: <a href="mailto:sayanth.t.m9090@gmail.com">sayanth.t.m9090@gmail.com</a> |
-            LinkedIn: <a href="https://www.linkedin.com/in/sayanth-t-m-889759218">sayanth-t-m-</a> |
-            Phone: <a href="tel:917012902263">(701) 290-2263</a> |
-            GitHub: <a href="https://github.com/sayanth-t-m">sayanth-t-m</a>
-            WhatsApp: <a href="https://wa.me/7012902263">7012902263</a>
-            Instagram: <a href="https://www.instagram.com/sayanth_t_m_/">sayanth_t_m_</a>
-        </p>
-        <p class="address">
-            Puthiya Veettil House, Chala East, 670621, Chala, Kannur
-        </p>
+        <div class="header-content">
+            <img src="foto1.jpg" alt="Profile Picture">
+            <div class="header-info">
+                <h1>Sayanth T M</h1>
+                <p class="contact-info">
+                    <a href="mailto:sayanth.t.m9090@gmail.com">sayanth.t.m9090@gmail.com</a> |
+                    <a href="https://www.linkedin.com/in/sayanth-t-m-889759218">LinkedIn</a> |
+                    <a href="tel:917012902263">(701) 290-2263</a> |
+                    <a href="https://github.com/sayanth-t-m">GitHub</a>
+                </p>
+                <p class="address">
+                    Puthiya Veettil House, Chala East, 670621, Chala, Kannur
+                </p>
+            </div>
+        </div>
     </header>
     
-
     <div class="container">
         <h2>Objective:</h2>
         <p>
@@ -64,7 +66,7 @@
         </p>
     </div>
 
-    <!-- Include the JavaScript file -->
-    <script src="script.js"></script>
+    <script src="particles.min.js"></script> <!-- Include particles.js library -->
+    <script src="script.js"></script> <!-- Your custom JavaScript -->
 </body>
 </html>
